5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1621_2926.log
== TEST (2019-04-01 18:20:15) 
-- CODE:
a= float(input("quantidade de acai no copo:"))
b= int(input("quantidade de esfirra:"))
t=24
s=3
valor=(s+t)


-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:21:21) 
-- CODE:
a= float(input("quantidade de acai no copo:"))
b= int(input("quantidade de esfirra:"))
t=24
s=3
valor=(s+t)
print(round(valor, 2))


-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:21:30) 
-- CODE:
a= float(input("quantidade de acai no copo:"))
b= int(input("quantidade de esfirra:"))
t=24
s=3
valor=(s+t)
print(round(valor, 2))


-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:22:52) 
-- CODE:
a= float(input("quantidade de acai no copo:"))
b= int(input("quantidade de esfirra:"))
t=24
s=3
valor=(s/t)
print(round(valor, 2))


-- OUTPUT:
0.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:23:57) 
-- CODE:
a= float(input("quantidade de acai no copo:"))
b= int(input("quantidade de esfirra:"))
t=24
s=3
valor= a+b/s+t
print(round(valor, 2))


-- OUTPUT:
528.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
